--- a/10_Possible_Excercise_Solution/index.html
+++ b/10_Possible_Excercise_Solution/index.html
@@ -36,6 +36,10 @@
                             </div>
                         </q-card-section>
                         <img :src="'https://image.tmdb.org/t/p/original'+movie.backdrop_path">
+                        <q-card-actions class="row justify-center">
+                            <q-btn flat icon="visibility" label="View Sinopsis" color="primary"
+                                @click="showSinopsis(movie)"></q-btn>
+                        </q-card-actions>
                     </q-card>
                     <q-inner-loading :showing="loading">
                         <q-spinner-gears size="80px" color="primary"></q-spinner-gears>
@@ -44,6 +48,22 @@
                 <q-pagination v-model="page" :max="total_pages" input gutter="20px"
                     size="20px"></q-pagination>
             </q-page-container>
+            <q-dialog v-model="sinopsisDialog">
+                <q-card>
+                    <q-card-section>
+                        <div class="text-h6">{{sinopsisMovie.title}}</div>
+                    </q-card-section>
+
+                    <q-card-section class="q-pt-none">
+                        {{sinopsisMovie.overview}}
+                    </q-card-section>
+
+                    <q-card-actions align="right">
+                        <q-btn flat label="Close" color="primary" v-close-popup></q-btn>
+                    </q-card-actions>
+                </q-card>
+            </q-dialog>
+
         </q-layout>
     </div>
 </body>
